# sbokena

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Justfile  README.md  build.sh  flake.nix  garnix.yaml
.github/workflows/: ci.yml
common/: CMakeLists.txt
common/include/: common.hh  direction.hh  level.hh  loader.hh  position.hh  rlutil.hh  types.hh  utils.hh
common/src/: common.cc  level.cc  loader.cc  types.cc  utils.cc
docs/: RULES.md
editor/: CMakeLists.txt
editor/include/: editor_level.hh  from_to_json.hh  grid.hh  object.hh  temp.hh  tile.hh
editor/src/: editor_level.cc  grid.cc  main.cc  temp.cc
game/: CMakeLists.txt
game/include/: gameplay.hh  level_complete.hh  pause.hh  scene.hh  start_menu.hh  state.hh
game/src/: gameplay.cc  level_complete.cc  main.cc  pause.cc  scene.cc  start_menu.cc  state.cc
levels/: example.sbk
nix/: devShell.nix  sbokena.nix
nix/checks/: format.nix
src/: main.cc
tests/: CMakeLists.txt  deferred_test.cc  directions_test.cc  game_state_step.cc  level_serde_test.cc  loader_test.cc  position_test.cc  say_hi_test.cc  theme_loader.cc
themes/: LAYOUT.md
